Use calc to avoid overflow of footer

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,6 +1,7 @@
 .main-footer {
   background-color: lighten($color-background, 5);
   padding: 1em;
+  height: 3em;
 
   a {
     color: $color-accent-primary;
